# package_trading

./: Dockerfile  README_EN.md  api_scan_report.html  api_scan_report.json  app_gui.py  app_gui_detect.py  azure-pipelines.yml  docker-compose.yml  package-lock.json  reporte_vulnerabilidades.json  reporte_vulnerabilidades_2.json  reporte_vulnerabilidades_v0.1.2_20251111_083054.json  requirements.txt  run_detection.bat  setup.cfg  setup.py  zap.yaml  zap_report.json  zap_report_v0.1.2_20251111_083054.html
data/input/: reporte_vulnerabilidades.json
data/vulnerable_code/: prompt_injection_example.py  sql_injection_example.py  xss_example.py
juice/: Dockerfile  docker-compose.yml
outputs/: detection_report.json
scripts/: run_security_crew.py
trading/agents/: code_remediator.py  code_scanner.py  security_analyst.py  severity_assessor.py  validator.py  vulnerability_detector.py
trading/controllers/: analyze_report.py  vulnerability_controller.py
trading/crews/: detection_crew.py  security_crew.py
trading/models/: vulnerability_model.py
trading/schemas/: detection.py  remediation.py  vulnerability.py
trading/task/: analysis_tasks.py  detection_tasks.py  remediation_tasks.py  validation_tasks.py
trading/tools/: code_patcher.py  file_handler.py  static_analyzer.py
trading/views/: vulnerability_views.py
