[metadata]
name = trading
version = 0.1.2
description = pnqa_trading
author = Desarrollo NQ Artificial
author_email = desarrollo@nqartificial.com
license = Private

[flake8]
max-line-length = 100
exclude = venv, .git, .gitignore, __pycache__, .pytest_cache, usr

[pylint]
ignore = venv,.git,.gitignore,__pycache__,.pytest_cache

[bandit]
exclude_dirs = ["venv", ".git",".gitignore","__pycache__",".pytest_cache"]

[coverage:run]
omit =
    app/bd/*
    /usr/lib/*

[tool:pytest]
addopts = --maxfail=2 --disable-warnings